[tool.poetry]
name = "vivoterra_woo"
version = "0.1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
SQLAlchemy = "^1.4.26"
PyMySQL = "^1.0.2"
sshtunnel = "^0.4.0"
google-cloud-bigquery = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
